Make new analysis requests use bounded stock entry transport